# AutomotiveClassifier

./: .gitignore  LICENSE.md  README.md  main.py  pyproject.toml
controllers/: APIComm.py  CSVFiltering.py  CarMakeData.py  DatasetFiltering.py
modelConstruction/: DatasetInitialization.py  DatasetNormalization.py  ModelConfiguration.py  ModelTraining.py  PartDataset.py  SplitDataset.py
modelValidation/: BuildConfusionMatrix.py  PrimaryValidation.py
test/: ModelTrainingTest.py
