[project]
name = "automotiveclassifier"
version = "0.1.0"
description = "Computer Vision model that can classify differences between specific makes (Toyota, Subaru, Ford, etc.) of vehicles."
authors = [
    {name = "Adam Long <adam.jacob.long@gmail.com>"}
]
license = "LICENSE.md"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "kaggle (>=1.8.2,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
