[project]
name = "automotiveclassifier"
version = "1.3.0"
description = "Computer Vision model that can classify differences between specific makes (Toyota, Subaru, Ford, etc.) of vehicles."
authors = [
    {name = "Adam Long <adam.jacob.long@gmail.com>"}
]
license = "LICENSE.md"
readme = "README.md"
requires-python = ">=3.11, <3.15"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "kaggle (>=1.8.2,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "opencv-python (>=4.10.0.84)",
    "torch (>=2.9.1,<3.0.0)",
    "torchvision (>=0.24.1,<0.25.0)",
    "numpy (>=2.0.0, <3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
